bugfix/ 1. duplicate controller